[gd_scene load_steps=4 format=3 uid="uid://4gw8f7047ejy"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_6eh3p"]
[ext_resource type="Texture2D" uid="uid://bexc0ctnxyau3" path="res://Assets/Base/PNGs/Kla'ed - Dreadnought - Base.png" id="2_ohpir"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fupbp"]
radius = 97.0
height = 270.0

[node name="Boss" type="Area2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_6eh3p")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, -2.28882e-05)
rotation = -3.13979
scale = Vector2(2.87512, 2.87512)
texture = ExtResource("2_ohpir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_fupbp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -1)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BulletContainer" type="Node2D" parent="."]
position = Vector2(0, 156)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
